create new user and save him to db

--- a/backend/views/admin/adminDashboard.ejs
+++ b/backend/views/admin/adminDashboard.ejs
@@ -7,5 +7,11 @@
 </head>
 <body>
     <h1>Admin</h1>
+    <a href="/logout">Logout</a>
+    
+    <a href="/admin/create">Kreiraj</a>
+    <a href="#">Korisnika</a>
+    <a href="#">Grad</a>
+    <a href="#">Proizvod</a>
 </body>
 </html>
